# text-to-sql-openenv-

./: Dockerfile  Pyproject.toml  README.md  inference.py  openenv.yoml  pyproject.toml  requirements.txt
app/: environment.py  graders.py  main.py  models.py  tasks.py
server/: app.py
