[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "text-to-sql-openenv"
version = "1.0.0"
description = "An RL environment for training and evaluating SQL query generation agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "pydantic==2.7.1",
    "httpx==0.27.0",
    "openai==1.30.1",
    "openenv-core>=0.2.0",
]

[project.scripts]
serve = "server.app:app"
start-server = "server.app:app"

[project.optional-dependencies]
dev = ["pytest", "httpx"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "server*"]

[tool.openenv]
name = "text-to-sql-env"
version = "1.0.0"
spec = "openenv.yaml"
entry_point = "server.app:app"
server_port = 7860
inference_script = "inference.py"
